--- a/src/roles/manager/dashboard/dashboard.component.html
+++ b/src/roles/manager/dashboard/dashboard.component.html
@@ -51,7 +51,7 @@
             <div class="hidden md:block w-1 h-1 bg-gray-300 rounded-full"></div>
              <div class="flex items-center gap-1.5">
               <span class="font-medium text-gray-900">Author ID:</span>
-              <span class="bg-gray-100 px-1.5 py-0.5 rounded text-xs font-mono">{{ idea.submittedByUserID }}</span>
+              <span class="bg-gray-100 px-1.5 py-0.5 rounded text-xs font-mono">{{ idea.userID }}</span>
             </div>
           </div>
 
